tests/rosetta/out/Fortran/a+b.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program a+b
  implicit none
    integer :: a
    integer :: b
  call main()
  
  contains
  recursive subroutine main()
    a = int(input())
    b = int(input())
    print *, (a + b)
  end subroutine main
end program a+b
